fix?(orga): wrong color on empty state

--- a/orga/app/styles/components/campaign/empty-state.scss
+++ b/orga/app/styles/components/campaign/empty-state.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   width: 100%;
   padding: 40px 0;
-  color: var(--pix-neutral-100);
+  color: var(--pix-neutral-500);
 
   &__text {
     display: flex;
